@@ -57,11 +57,13 @@ static PCMakefileFactory *_factory = nil;
   return _factory;
 }
 
-- (void)createMakefileForProject:(NSString *)prName
+- (void)createMakefileForProject:(PCProject *)project
 {
   NSUserDefaults *ud = [NSUserDefaults standardUserDefaults];
   NSString       *buildDir = [ud objectForKey:RootBuildDirectory];
+  NSString       *prName = [project projectName];
   NSString       *buildName = [prName stringByAppendingPathExtension:@"build"];
+  NSString       *instDir = [[project projectDict] objectForKey:PCInstallDir];
 
   NSAssert(prName, @"No project name given!");
 
@@ -74,6 +76,22 @@ static PCMakefileFactory *_factory = nil;
   [mfile appendString:@"#\n"];
   [mfile appendString:@"# GNUmakefile - Generated by ProjectCenter\n"];
   [mfile appendString:@"#\n"];
+
+  if ([instDir isEqualToString:@"LOCAL"] || 
+      [instDir isEqualToString:@"SYSTEM"] ||
+      [instDir isEqualToString:@"USER"] ||
+      [instDir isEqualToString:@"NETWORK"])
+    {
+      [mfile appendString:
+	[NSString stringWithFormat:@"\nGNUSTEP_INSTALLATION_DOMAIN = %@\n",
+	  instDir]];
+    }
+  else if ([instDir isEqualToString:@""])
+    {
+      [mfile appendString:
+	[NSString stringWithFormat:@"\nGNUSTEP_INSTALLATION_DOMAIN = LOCAL\n",
+	  instDir]];
+    }
   
   [mfile appendString:@"\ninclude $(GNUSTEP_MAKEFILES)/common.make\n"];
 
@@ -201,8 +219,8 @@ static PCMakefileFactory *_factory = nil;
 
 - (void)appendString:(NSString *)aString
 {
-  NSAssert( mfile, @"No valid makefile available!");
-  NSAssert( aString, @"No valid string!");
+  NSAssert(mfile, @"No valid makefile available!");
+  NSAssert(aString, @"No valid string!");
 
   [mfile appendString:aString];
 }
