@@ -146,7 +146,7 @@
   [mf createPreambleForProject:self];
 
   // Create the new file
-  [mf createMakefileForProject:projectName];
+  [mf createMakefileForProject:self];
 
   // Head
   [self appendHead:mf];
